<resources>

    <string name="app_name">uTeach</string>

    <string name="credentials_signup">Sign Up</string>
    <string name="credentials_login">Log In</string>

    <string name="credentials_name">Name</string>
    <string name="credentials_example_name">Santiago Aguilera</string>
    <string name="credentials_email">Email</string>
    <string name="credentials_example_email">santiago.aguilera@example.com</string>
    <string name="credentials_age">Age</string>
    <string name="credentials_example_age">22</string>
    <string name="credentials_password">Password</string>
    <string name="credentials_forgot_account">Forgot password?</string>
    <string name="credentials_login_native">Log In</string>
    <string name="credentials_login_facebook">Facebook</string>
    <string name="or">OR</string>

</resources>
