<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <import type="com.u.teach.model.Gender" />
        <variable name="presenter" type="com.u.teach.flow.credentials.presenter.CredentialsSignUpPresenter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true" >

        <LinearLayout
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"

            android:padding="@dimen/credentials_signup_padding">

            <ImageView
                android:id="@+id/credentials_sign_up_image"

                android:layout_width="@dimen/credentials_signup_image_size"
                android:layout_height="@dimen/credentials_signup_image_size"

                android:src="@drawable/placeholder_user_image"

                android:onClick="@{presenter::onImageClicked}"

                android:layout_marginBottom="@dimen/credentials_signup_margin_bottom" />

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/uTeachDefaultFontStyle"
                android:id="@+id/credentials_sign_up_name"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/credentials_name"

                app:met_floatingLabel="normal"
                app:met_minCharacters="1"
                app:met_maxCharacters="50"
                app:met_helperText="@string/credentials_example_name"

                android:layout_marginBottom="@dimen/credentials_signup_margin_bottom" />

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/uTeachDefaultFontStyle"
                android:id="@+id/credentials_sign_up_email"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/credentials_email"

                app:met_floatingLabel="normal"
                app:met_minCharacters="1"
                app:met_maxCharacters="50"
                app:met_helperText="@string/credentials_example_email"

                android:layout_marginBottom="@dimen/credentials_signup_margin_bottom" />

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/uTeachDefaultFontStyle"
                android:id="@+id/credentials_sign_up_age"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/credentials_age"

                android:inputType="numberDecimal"

                app:met_floatingLabel="normal"
                app:met_minCharacters="1"
                app:met_maxCharacters="2"
                app:met_helperText="@string/credentials_example_age"

                android:layout_marginBottom="@dimen/credentials_signup_margin_bottom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"

                android:layout_marginBottom="@dimen/credentials_signup_margin_bottom" >

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/credentials_sign_up_gender_male"

                        android:layout_width="@dimen/credentials_signup_gender_size"
                        android:layout_height="@dimen/credentials_signup_gender_size"

                        android:layout_gravity="center"

                        android:src="@mipmap/ic_launcher"

                        android:onClick="@{(v) -> presenter.onGenderClick(Gender.MALE_)}"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/credentials_sign_up_gender_female"

                        android:layout_width="@dimen/credentials_signup_gender_size"
                        android:layout_height="@dimen/credentials_signup_gender_size"

                        android:layout_gravity="center"

                        android:src="@mipmap/ic_launcher"

                        android:onClick="@{(v) -> presenter.onGenderClick(Gender.FEMALE_)}" />

                </FrameLayout>

            </LinearLayout>

            <TextView
                style="@style/uTeachDefaultFontStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:gravity="center"
                android:background="#000000"
                android:text="Hardcoded button signup"
                android:textColor="#ffffff"/>

        </LinearLayout>

    </ScrollView>

</layout>