<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable name="presenter" type="com.u.teach.flow.credentials.presenter.CredentialsLogInPresenter" />
        <variable name="user" type="com.u.teach.flow.credentials.presenter.CredentialsLogInPresenter.LoginForm" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/uTeachDefaultFontStyle"
            android:id="@+id/credentials_login_username"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/credentials_email"

            android:inputType="textEmailAddress"

            app:met_floatingLabel="normal"

            android:text="@={user.email}"

            app:met_baseColor="@color/main_color"
            app:met_primaryColor="@color/main_color"
            app:met_textColor="@color/main_color"

            app:met_underlineColor="@color/main_color_alpha_high"
            app:met_textColorHint="@color/main_color_alpha_high"
            app:met_floatingLabelTextColor="@color/main_color_alpha_high"

            app:met_iconLeft="@drawable/ic_login_email"
            app:met_iconPadding="2dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            style="@style/uTeachDefaultFontStyle"
            android:id="@+id/credentials_login_password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/credentials_password"

            android:inputType="textPassword"

            app:met_floatingLabel="normal"

            app:met_baseColor="@color/main_color"
            app:met_primaryColor="@color/main_color"
            app:met_textColor="@color/main_color"

            app:met_underlineColor="@color/main_color_alpha_high"
            app:met_textColorHint="@color/main_color_alpha_high"
            app:met_floatingLabelTextColor="@color/main_color_alpha_high"

            android:text="@={user.password}"

            app:met_iconLeft="@drawable/ic_login_password"
            app:met_iconPadding="2dp"/>

        <TextView
            style="@style/uTeachDefaultFontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="right|center_vertical"

            android:textSize="14sp"
            android:textColor="@color/background_color"
            android:text="@string/credentials_forgot_account"

            android:onClick="@{(v) -> presenter.onForgotPassword()}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:gravity="center"

            android:orientation="vertical">

            <TextView
                style="@style/uTeachDefaultFontStyle"
                android:id="@+id/view_credentials_login_native"

                android:layout_width="match_parent"
                android:layout_height="@dimen/credentials_button_height"

                android:text="@string/credentials_login_native"
                android:textSize="@dimen/credentials_button_text_size"
                android:textColor="@color/color_selector_textview_login_empty"

                android:clickable="true"

                android:gravity="center"

                android:onClick="@{(v) -> presenter.onNativeLogin()}"

                android:background="@drawable/drawable_selector_credentials_login_empty" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"

                android:gravity="center"

                android:alpha="@dimen/credentials_or_alpha"

                android:layout_marginTop="@dimen/credentials_button_separator"
                android:layout_marginBottom="@dimen/credentials_button_separator" >

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:background="@color/main_color" />

                <TextView
                    style="@style/uTeachDefaultFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/or"
                    android:textSize="@dimen/credentials_or_text_size"
                    android:textColor="@color/main_color"

                    android:layout_margin="4dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:background="@color/main_color" />

            </LinearLayout>

            <TextView
                style="@style/uTeachDefaultFontStyle"
                android:id="@+id/view_credentials_login_facebook"

                android:layout_width="match_parent"
                android:layout_height="@dimen/credentials_button_height"

                android:text="@string/credentials_login_facebook"
                android:textSize="@dimen/credentials_button_text_size"
                android:textColor="@color/color_selector_textview_login_filled"

                android:clickable="true"

                android:gravity="center"

                android:onClick="@{(v) -> presenter.onFacebookLogin()}"

                android:background="@drawable/drawable_selector_credentials_login_filled" />

        </LinearLayout>

    </LinearLayout>

</layout>